Issue #2086287 by dooug: Fixed many typos in workflow and sub-modules.
Issue #2086605 by johnv: Added settings to hide TimeZone for "Schedule for state change" option.
Issue #2019345 by johnv: Fixed #states to hide/show scheduling info in Workflow Field Widget.
Issue #2095467 by johnv: Changed flow logic to use new class WorkflowScheduledTransition.
Issue #2095467 by johnv: Moved deprecated functions for class WorkflowScheduledTransition to new file workflow.deprecated.inc.
Issue #2071733 by johnv: Changed workflow_show_form() to work with both old and new workflow objects.
Issue #2019345 by johnv: Updated Workflow classes to show Workflow Form also on Node View page.
Issue #2019345 by johnv: Fixed some issues in workflow.module file when using WorkflowField submodule.
Issue #2019345 by johnv: Changed workflow_field submodule to support Workflow Form on Node view page.
Issue #2019345 by johnv: Moved Node specific function workflow_forms() from workflow.module to workflow.node.inc.
Issue #2019345 by johnv: Fixed WorkflowItem did not save tab_roles properly on Field Settings page.
Issue #2019345 by johnv: Added some functions to the Workflow Entity classes.
Issue #2019345 by johnv: Changed calls to Workflow object in various includes.
Issue #2019345 by johnv: Added Workflow Field support in History tab page.
Issue #2019345 by johnv: Added new WorkflowTransition class.
Issue #2019345 by johnv: Moved Workflow Form processing code from workflow.module into new WorkflowTransition class.
Issue #2019345 by johnv: Replaced all functional calls to Workflow object by OOP Methods of Workflow class.
Issue #2019345 by johnv: Fixed wrong calls to Workflow::getFirstSid().
Issue #2102405 by johnv: Added basic Entity support for Workflow Field.
Issue #2102405 by johnv: Added Entity support for Workflow Scheduled Transitions.
Issue #2019345 by johnv: Fixed caching for WorkflowState:getStates.