@@ -204,3 +204,4 @@ Issue #2019345 by johnv: Fixed wrong calls to Workflow::getFirstSid().
 Issue #2102405 by johnv: Added basic Entity support for Workflow Field.
 Issue #2102405 by johnv: Added Entity support for Workflow Scheduled Transitions.
 Issue #2019345 by johnv: Fixed caching for WorkflowState:getStates.
+Issue #2019345 by johnv: Changed workflow_node_view() to use Workflow classes.
